# system

./: CMakeLists.txt  README.md  mpp_module.json
mozart++/mpp_system/: process.hpp
src/: dummy.cpp  process_unix.cpp  process_win32.cpp
tests/: test-process.cpp  test-speed-split.cpp
